# Feature_extraction

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: UMAP_dim_reduc_iter.ipynb  VBGMM_clustering.ipynb  analysis_classifierRefl.ipynb  cluster_hist.ipynb  colormapping_by_clustering.ipynb  compare_cluster_dist.ipynb  compare_distr.ipynb  contribute_ratio.ipynb  copy_images.ipynb  dim_reduc_iter.ipynb  display_confusion_matrix.ipynb  distr_testimages.ipynb  one_class_SVM.ipynb  one_class_SVM_test.ipynb  optuna.ipynb  optuna_tutorial.ipynb  pickup_image_from_feature.ipynb  tSNE_dim_reduc_iter copy.ipynb  trained_VBGMM_clustering.ipynb  trained_VBGMM_clustering_get_images.ipynb  tsne.ipynb  umap.ipynb  vis_cluster_imgs.ipynb  visualize_cnn_kernels.ipynb  visualizing_features.ipynb
pyprojecttoml-versions/: pyproject-poetry.toml  pyproject-uv.toml  requirements.txt
src/: __init__.py  exception.py  loss_function.py  mytyping.py  utilities.py
src/configs/: model_configs.py  visualization_configs.py
src/data_processing/: image_cropping.py
src/defined_models/: _AutoEncoder_model.py  _ConvVAE.py  _SECAE32.py  _SECAE64.py  _SimpleCAE64.py  __init__.py  _modules.py
src/dimensionality_reduction/: dim_reduce.py
src/features/: image_cropping.py
src/optimizing/: using_optuna.py
src/predefined_models/: ConvVAE.py  _CAE.py  _CNN_modules.py  _DenseVAE.py  _MLP.py  _ResNetVAE.py  _SECAE.py  _SECAE32.py  _SECAE64.py  _SEConvVAE64.py  _SEConvVAE_softplus64.py  _SimpleCAE.py  _SimpleCAE128.py  _SimpleCAE16.py  _SimpleCAE32.py  _SimpleCAE64.py  _SimpleConvVAE64.py  _SimpleConvVAE_softplus32.py  _SimpleConvVAE_softplus64.py  _VAE.py  _VQVAE.py  _ViT.py  _ViT_MAE.py  _ViT_modules.py  __init__.py  _build_VAE.py  _load_model.py  _modules.py  ae.py  vae.py
src/preprocessing/: image_cropping.py  rescaling.py
src/running_script/: features_extraction.py  features_extractionv1.py  features_extractionv2.py  predict_model.py  train_MAEViT.py  train_autoencoder.py  train_autoencoder_with_tb.py  train_autoencoder_with_tb_new.py  train_classifier.py  train_model.py  train_reflectance_predictor.py  train_vae_with_tb.py
src/use_models/: train_model.py
src/utilities/: __init__.py  _utils.py  export_tb_log.py  feat_ext.py
tests/: test_classifier.py  test_config.py  test_dataset.py  test_mlp.py  test_resnet.py  test_typeguard.py
tmp/: lecture09_homework.ipynb  lecture09_homework_myscript.ipynb  lecture09_script.py  lecture09_script_v2.py  lecuture09_visualize.ipynb  leuture09_visualize.ipynb
(+53 files in other folders)
